@@ -1,3 +1,8 @@
+2002-05-03  Matthias Clasen  <maclas@gmx.de>
+
+	* gtkdoc-scangobj.in: Fix for segfault in scangobj-generated C
+	program on Solaris.  (#80606, Jacob Berkman)
+
 2002-05-01  Matthias Clasen  <maclas@gmx.de>
 
 	* tools/docpercentages.pl: Add the script which Owen uses for the 
